2022-11-29  Jacob Bachmeyer  <jcb@gnu.org>

	* dejagnu.h (TestState::totals): Emit header line, like the C version.

	* dejagnu.h (TestState::note): New method, like C note().
	* doc/dejagnu.texi (C++ unit testing API): Add note() method.

	* doc/dejagnu.texi (C++ unit testing API): Fix incorrect
	documentation.  The C and C++ interfaces share the same global
	counters, as do all C++ TestState objects.

2022-11-28  Jacob Bachmeyer  <jcb@gnu.org>

	* dejagnu.h: Remove _DEJAGNU_WAIT_ conditional and revise comment
	to explain improved solution to the problem for which it seems to
	have been intended as a workaround.
	(wait): Remove this function.  It conflicted with POSIX wait(2);
	this conflict was reported as PR59586.

	* testsuite/runtest.main/stats.exp: Add test for UNSUPPORTED
	result from a unit test program.
	* testsuite/runtest.main/nested/testsuite/stat.test/unit-sub.awk:
	Update to account for addition of END marker and UNSUPPORTED to
	DejaGnu unit testing protocol.

	* dejagnu.h: Add UNSUPPORTED test result.
	(unsupport): New counter variable for UNSUPPORTED results.
	(unsupported): New function in C API.
	(TestState::unsupported): New function in C++ API.
	(outstate_list): Add UNSUPPORTED entry.
	(teststate::laststate): Likewise.
	(totals): Mention number of unsupported tests.
	(TestState::totals): Likewise for C++ API.
	* lib/dejagnu.exp (host_execute): Add UNSUPPORTED test result.
	* doc/dejagnu.texi (DejaGnu unit test protocol): Document same.
	(C unit testing API): Document new function for same.
	(C++ unit testing API): Document new function for same.

	* testsuite/libdejagnu/unit-c.c: Add test for UNSUPPORTED.
	* testsuite/libdejagnu/unit.exp: Likewise.

	* testsuite/libdejagnu/unit.exp: Add test for NOTE message.

2022-11-26  Jacob Bachmeyer  <jcb@gnu.org>

	* Makefile.in: Regenerate.
	* Makefile.am (AM_CXXFLAGS): Change this...
	(AM_CPPFLAGS): ...to this.  (Also remove -g flag.)
	(check_PROGRAMS): Add testsuite/libdejagnu/unit-c.